--- a/meat/style.css
+++ b/meat/style.css
@@ -12,12 +12,12 @@
     width: 100%;
     height: 65px;
     margin: 0 auto;
-    background: #ffffff;
+    background:#ffffff;
 }
 
 img {
     float: left;
-    padding:1px 20px;
+    padding:0.5px 20px;
 }
 
 
@@ -36,7 +36,7 @@ nav li {
     float: left;
 }
     nav li:hover {
-        background-color: #7A918D;
+        background-color:#a36b6b;
         opacity: 0.5;
     }
 
@@ -88,7 +88,7 @@ nav a {
     }
 
 .text01 {
-    :eae3e3;
+
     text-align: justify;
     padding: 100px 10%;
     opacity: 0.8;
@@ -99,8 +99,47 @@ h3 {
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
-    color: #200040;
+    color: #ffffff;
 }
+
+.bgimg05 {
+    background-image: url(images/1209.jpg);
+    height: 300px;
+    width: 100%;
+    display: block;
+    margin: auto;
+    s
+}
+
+.img {
+    display: block;
+    margin: auto;
+}
+
+.texttt {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 5px;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.texppp {
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 15px;
+    color: #ffffff;
+}
+
+.texaaa {
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+
+
 
 
 
