--- a/meat/style.css
+++ b/meat/style.css
@@ -135,7 +135,7 @@ h3 {
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
-    color: #ffffff;
+    color:#ffffff
 }
 
 
