--- a/meat/Style2.css
+++ b/meat/Style2.css
@@ -1,5 +1,22 @@
-﻿html, body {
-    background:#764e4e
-    position:fixed
-      
+﻿html, body 
+    .rccc{
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    opacity: 0.8;
+    background-position: center;
+    position: relative;
+}
+.rccc {
+    background-image: url(images/umai.jpg);
+    height: 550px;
+    width: 100%;
+    display: block;
+    margin: auto;
+}
+.container {
+    width: 100%;
+    height: 65px;
+    margin: 0 auto;
+    background: #ffffff
 }
