--- a/meat/style.css
+++ b/meat/style.css
@@ -138,7 +138,22 @@ h3 {
     color:#ffffff
 }
 
+.rccc {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    opacity: 0.8;
+    background-position: center;
+    position: relative;
+}
 
+.rccc {
+    background-image: url(images/1212.jpg);
+    height: 550px;
+    width: 100%;
+    display: block;
+    margin: auto;
+}
 
 
 
